--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <article>
             <h2>3. Team Player</h2>
-            <p>I thrive in collaborative environments and am a team player, contributing positively to group dynamics and fostering a sense of unity.</p>
+            <p>I thrive in collaborative environments, I'm also a team player, contributing positively to group dynamics and fostering a sense of unity.</p>
         </article>
 
        <article>
